--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="eu.aljoshavieth.simplevirus.MainActivity">
 
-    <ListView
-        style="@style/Widget.AppCompat.ListView"
-        android:id="@+id/articleList"
+    <android.support.v4.widget.SwipeRefreshLayout android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        android:layout_height="wrap_content"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+        <ListView
+            style="@style/Widget.AppCompat.ListView"
+            android:id="@+id/articleList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </ListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
+
