--- a/app/src/main/res/layout/article.xml
+++ b/app/src/main/res/layout/article.xml
@@ -1,41 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/SCROLLER"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none"
-        android:fillViewport="true">
-    <RelativeLayout
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="eu.aljoshavieth.simplevirus.MainActivity" >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="VIRUS"
-            android:id="@+id/articleDescription"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:gravity="center_horizontal"
-            android:foregroundGravity="center_horizontal"
-            android:paddingBottom="14dp" />
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="eu.aljoshavieth.simplevirus.MainActivity">
 
-        <TextView
-            android:id="@+id/articleText"
+
+        <WebView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="1.0"
-            android:layout_below="@+id/articleDescription"
-            style="@style/TextAppearance.AppCompat.Medium"/>
+            android:id="@+id/webView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:scrollbars="none"
+            />
+
 
     </RelativeLayout>
-
-    </ScrollView>
