--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/about"
+        android:title="@string/about_menu" />
+    <item
+        android:id="@+id/imprint"
+        android:title="@string/imprint_menu" />
 </menu>
